// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all locations query without search/radius/area parameter should return all locations 1`] = `
Object {
  "data": Object {
    "allLocations": Object {
      "edges": Array [
        Object {
          "node": Object {
            "locationId": "prague_cz",
            "name": "Prague",
          },
        },
        Object {
          "node": Object {
            "locationId": "PRG",
            "name": "Václav Havel Airport Prague",
          },
        },
        Object {
          "node": Object {
            "locationId": "central-europe",
            "name": "Central Europe",
          },
        },
        Object {
          "node": Object {
            "locationId": "europe",
            "name": "Europe",
          },
        },
      ],
    },
  },
}
`;

exports[`all locations query without search/radius/area parameter should return only first location 1`] = `
Object {
  "data": Object {
    "allLocations": Object {
      "edges": Array [
        Object {
          "node": Object {
            "locationId": "prague_cz",
            "name": "Prague",
          },
        },
      ],
    },
  },
}
`;
